fixed card overflow bug

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -93,7 +93,6 @@ h1 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 425px;
-    height: 1300px;
     color: black
 }
 
